Fix link in dark mode

--- a/assets/scss/pages/_project-detail.scss
+++ b/assets/scss/pages/_project-detail.scss
@@ -77,6 +77,10 @@
 
                   &:hover {
                      color: $black;
+
+                     @media (prefers-color-scheme: dark) {
+                        color: $white;
+                     }
                   }
                }
             }
